Max img dims fixes landscape issue on mobile

--- a/css/positioning.css
+++ b/css/positioning.css
@@ -40,7 +40,9 @@ figure {
 }
 
 img {
-  width: 100%;
+  max-height: 80vh;
+  max-width: 80vw;
+  width: auto;
 }
 
 figcaption {
